feat: add markup & styles for btn component

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>coffeeroasters - Great coffee made simple</title>
   </head>
-  <body></body>
+  <body>
+    <a href="/create-plan.html" class="btn">Create your plan</a>
+    <a href="/create-plan.html" class="btn btn--disabled">Create your plan</a>
+  </body>
 </html>
