style: add styles for header layout component

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <nav class="header__nav">
         <ul class="header__nav-menu">
           <li>
-            <a href="/index.html" class="header__nav-link">Home</a>
+            <a href="/index.html" class="font-nav header__nav-link">Home</a>
           </li>
           <li>
-            <a href="/about-us.html" class="header__nav-link">About us</a>
+            <a href="/about-us.html" class="font-nav header__nav-link">About us</a>
           </li>
           <li>
-            <a href="/create-plan.html" class="header__nav-link">Create your plan</a>
+            <a href="/create-plan.html" class="font-nav header__nav-link">Create your plan</a>
           </li>
         </ul>
       </nav>
