--- a/index.html
+++ b/index.html
@@ -32,13 +32,28 @@
             <a href="/index.html" class="font-nav header__nav-link">Home</a>
           </li>
           <li>
-            <a href="/about-us.html" class="font-nav header__nav-link">About us</a>
+            <a href="/about-us.html" class="font-nav header__nav-link"
+              >About us</a
+            >
           </li>
           <li>
-            <a href="/create-plan.html" class="font-nav header__nav-link">Create your plan</a>
+            <a href="/create-plan.html" class="font-nav header__nav-link"
+              >Create your plan</a
+            >
           </li>
         </ul>
       </nav>
     </header>
+    <main class="main">
+      <section class="hero">
+        <h1>Great coffee made simple.</h1>
+        <p>
+          Start your mornings with the world's best coffees. Try our expertly
+          curated artisan coffees from our best roasters delivered directly to
+          your door, at your schedule.
+        </p>
+        <a href="/create-plan.html">Create your plan</a>
+      </section>
+    </main>
   </body>
 </html>
