--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
     </header>
     <main class="main">
       <section class="hero">
-        <h1>Great coffee made simple.</h1>
-        <p>
-          Start your mornings with the world's best coffees. Try our expertly
-          curated artisan coffees from our best roasters delivered directly to
-          your door, at your schedule.
-        </p>
-        <a href="/create-plan.html">Create your plan</a>
+        <div class="hero__text-container">
+          <h1 class="heading-xl hero__heading">Great coffee made simple.</h1>
+          <p class="font-body hero__subheading">
+            Start your mornings with the world's best coffees. Try our expertly
+            curated artisan coffees from our best roasters <br> delivered directly to
+            your door, at your schedule.
+          </p>
+          <a class="btn hero__btn" href="/create-plan.html">Create your plan</a>
+        </div>
       </section>
     </main>
   </body>
