--- a/index.html
+++ b/index.html
@@ -50,12 +50,27 @@
           <h1 class="heading-xl hero__heading">Great coffee made simple.</h1>
           <p class="font-body hero__subheading">
             Start your mornings with the world's best coffees. Try our expertly
-            curated artisan coffees from our best roasters <br> delivered directly to
-            your door, at your schedule.
+            curated artisan coffees from our best roasters <br />
+            delivered directly to your door, at your schedule.
           </p>
           <a class="btn hero__btn" href="/create-plan.html">Create your plan</a>
         </div>
       </section>
     </main>
+    <!-- CARD component -->
+    <!-- <div class="card">
+      <img
+        src="/assets/home/desktop/image-gran-espresso.png"
+        alt=""
+        class="card__img"
+      />
+      <div class="card__description">
+        <p class="heading-sm u-text-center card__heading">Gran Espresso</p>
+        <p class="font-body u-text-center">
+          Light and flavorful blend with cocoa and black pepper for an intense
+          experience
+        </p>
+      </div>
+    </div> -->
   </body>
 </html>
