feat: add markup for section.collection in index.html

--- a/index.html
+++ b/index.html
@@ -56,6 +56,71 @@
           <a class="btn hero__btn" href="/create-plan.html">Create your plan</a>
         </div>
       </section>
+      <section class="collection">
+        <div class="collection__heading">
+          <h2>Our collection</h2>
+        </div>
+        <div class="collection__gallery">
+          <div class="card">
+            <img
+              src="/assets/home/desktop/image-gran-espresso.png"
+              alt="Gran Espresso"
+              class="card__img"
+            />
+            <div class="card__description">
+              <p class="heading-sm u-text-center card__heading">
+                Gran Espresso
+              </p>
+              <p class="font-body u-text-center">
+                Light and flavorful blend with cocoa and black pepper for an
+                intense experience
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="/assets/home/desktop/image-planalto.png"
+              alt="Planalto"
+              class="card__img"
+            />
+            <div class="card__description">
+              <p class="heading-sm u-text-center card__heading">Planalto</p>
+              <p class="font-body u-text-center">
+                Brazilian dark roast with rich and velvety body, and hints of
+                fruits and nuts.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="/assets/home/desktop/image-piccollo.png"
+              alt="Piccollo"
+              class="card__img"
+            />
+            <div class="card__description">
+              <p class="heading-sm u-text-center card__heading">Piccollo</p>
+              <p class="font-body u-text-center">
+                Mild and smooth blend featuring notes of toasted almond and
+                dried cherry.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="/assets/home/desktop/image-danche.png"
+              alt="Danche"
+              class="card__img"
+            />
+            <div class="card__description">
+              <p class="heading-sm u-text-center card__heading">Danche</p>
+              <p class="font-body u-text-center">
+                Ethiopian hand-harvested blend densely packed with vibrant fruit
+                notes.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- CARD component -->
     <!-- <div class="card">
