--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
       </section>
       <section class="collection">
         <div class="collection__heading">
-          <h2>Our collection</h2>
+          <h2 class="heading-xxl u-text-center">Our collection</h2>
         </div>
         <div class="collection__gallery">
-          <div class="card">
+          <div class="card collection__card">
             <img
               src="/assets/home/desktop/image-gran-espresso.png"
               alt="Gran Espresso"
@@ -77,7 +77,7 @@
               </p>
             </div>
           </div>
-          <div class="card">
+          <div class="card collection__card">
             <img
               src="/assets/home/desktop/image-planalto.png"
               alt="Planalto"
@@ -91,7 +91,7 @@
               </p>
             </div>
           </div>
-          <div class="card">
+          <div class="card collection__card">
             <img
               src="/assets/home/desktop/image-piccollo.png"
               alt="Piccollo"
@@ -105,7 +105,7 @@
               </p>
             </div>
           </div>
-          <div class="card">
+          <div class="card collection__card">
             <img
               src="/assets/home/desktop/image-danche.png"
               alt="Danche"
