feat: add markup for section.features in index.html

--- a/index.html
+++ b/index.html
@@ -121,6 +121,67 @@
           </div>
         </div>
       </section>
+      <section class="features">
+        <div class="features__blackboard">
+          <h2>Why choose us</h2>
+          <p>
+            A large part of our role is choosing which particular coffees will
+            be featured in our range. This means working closely with the best
+            coffee growers to give you a more impactful experience on every
+            level.
+          </p>
+          <div class="features__list">
+            <div class="card">
+              <img
+                src="/assets/home/desktop/icon-coffee-bean.svg"
+                alt="Best Quality"
+                class="card__img"
+              />
+              <div class="card__description">
+                <p class="heading-sm u-text-center card__heading">
+                  Best Quality
+                </p>
+                <p class="font-body u-text-center">
+                  Discover an endless variety of the world’s best artisan coffee
+                  from each of our roasters.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="/assets/home/desktop/icon-gift.svg"
+                alt="Exclusive benefits"
+                class="card__img"
+              />
+              <div class="card__description">
+                <p class="heading-sm u-text-center card__heading">
+                  Exclusive benefits
+                </p>
+                <p class="font-body u-text-center">
+                  Special offers and swag when you subscribe, including 30% off
+                  your first shipment.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="/assets/home/desktop/icon-truck.svg"
+                alt="Free shipping"
+                class="card__img"
+              />
+              <div class="card__description">
+                <p class="heading-sm u-text-center card__heading">
+                  Free shipping
+                </p>
+                <p class="font-body u-text-center">
+                  We cover the cost and coffee is delivered fast. Peak
+                  freshness: guaranteed.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- CARD component -->
     <!-- <div class="card">
