style: add styles for section.features in index.html

--- a/index.html
+++ b/index.html
@@ -123,57 +123,57 @@
       </section>
       <section class="features">
         <div class="features__blackboard">
-          <h2>Why choose us</h2>
-          <p>
+          <h2 class="heading-lg features__heading">Why choose us</h2>
+          <p class="font-body features__subheading u-text-center">
             A large part of our role is choosing which particular coffees will
-            be featured in our range. This means working closely with the best
+            be featured <br> in our range. This means working closely with the best
             coffee growers to give you a more impactful experience on every
             level.
           </p>
           <div class="features__list">
-            <div class="card">
+            <div class="card features__card">
               <img
                 src="/assets/home/desktop/icon-coffee-bean.svg"
                 alt="Best Quality"
-                class="card__img"
+                class="card__img features__img"
               />
               <div class="card__description">
-                <p class="heading-sm u-text-center card__heading">
+                <p class="heading-sm u-text-center card__heading features__card-heading">
                   Best Quality
                 </p>
-                <p class="font-body u-text-center">
+                <p class="font-body u-text-center features__card-subheading">
                   Discover an endless variety of the world’s best artisan coffee
                   from each of our roasters.
                 </p>
               </div>
             </div>
-            <div class="card">
+            <div class="card features__card">
               <img
                 src="/assets/home/desktop/icon-gift.svg"
                 alt="Exclusive benefits"
-                class="card__img"
+                class="card__img features__img"
               />
               <div class="card__description">
-                <p class="heading-sm u-text-center card__heading">
+                <p class="heading-sm u-text-center card__heading features__card-heading">
                   Exclusive benefits
                 </p>
-                <p class="font-body u-text-center">
+                <p class="font-body u-text-center features__card-subheading">
                   Special offers and swag when you subscribe, including 30% off
                   your first shipment.
                 </p>
               </div>
             </div>
-            <div class="card">
+            <div class="card features__card">
               <img
                 src="/assets/home/desktop/icon-truck.svg"
                 alt="Free shipping"
-                class="card__img"
+                class="card__img features__img"
               />
               <div class="card__description">
-                <p class="heading-sm u-text-center card__heading">
+                <p class="heading-sm u-text-center card__heading features__card-heading">
                   Free shipping
                 </p>
-                <p class="font-body u-text-center">
+                <p class="font-body u-text-center features__card-subheading">
                   We cover the cost and coffee is delivered fast. Peak
                   freshness: guaranteed.
                 </p>
