feat: add markup for section.workflow in index.html

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
           <h2 class="heading-lg features__heading">Why choose us</h2>
           <p class="font-body features__subheading u-text-center">
             A large part of our role is choosing which particular coffees will
-            be featured <br> in our range. This means working closely with the best
-            coffee growers to give you a more impactful experience on every
-            level.
+            be featured <br />
+            in our range. This means working closely with the best coffee
+            growers to give you a more impactful experience on every level.
           </p>
           <div class="features__list">
             <div class="card features__card">
@@ -138,7 +138,9 @@
                 class="card__img features__img"
               />
               <div class="card__description">
-                <p class="heading-sm u-text-center card__heading features__card-heading">
+                <p
+                  class="heading-sm u-text-center card__heading features__card-heading"
+                >
                   Best Quality
                 </p>
                 <p class="font-body u-text-center features__card-subheading">
@@ -154,7 +156,9 @@
                 class="card__img features__img"
               />
               <div class="card__description">
-                <p class="heading-sm u-text-center card__heading features__card-heading">
+                <p
+                  class="heading-sm u-text-center card__heading features__card-heading"
+                >
                   Exclusive benefits
                 </p>
                 <p class="font-body u-text-center features__card-subheading">
@@ -170,7 +174,9 @@
                 class="card__img features__img"
               />
               <div class="card__description">
-                <p class="heading-sm u-text-center card__heading features__card-heading">
+                <p
+                  class="heading-sm u-text-center card__heading features__card-heading"
+                >
                   Free shipping
                 </p>
                 <p class="font-body u-text-center features__card-subheading">
@@ -181,6 +187,44 @@
             </div>
           </div>
         </div>
+      </section>
+      <section class="workflow">
+        <h2>How it works</h2>
+        <div class="workflow__progress">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+        <div class="workflow__description">
+          <div class="workflow__card">
+            <div class="workflow-step-number">01</div>
+            <div class="workflow-step-name">Pick your coffee</div>
+            <div class="workflow-step-desc">
+              Select from our evolving range of artisan coffees. Our beans are
+              ethically sourced and we pay fair prices for them. There are new
+              coffees in all profiles every month for you to try out.
+            </div>
+          </div>
+          <div class="workflow__card">
+            <div class="workflow-step-number">02</div>
+            <div class="workflow-step-name">Choose the frequency</div>
+            <div class="workflow-step-desc">
+              Customize your order frequency, quantity, even your roast style
+              and grind type. Pause, skip or cancel your subscription with no
+              commitment through our online portal.
+            </div>
+          </div>
+          <div class="workflow__card">
+            <div class="workflow-step-number">03</div>
+            <div class="workflow-step-name">Receive and enjoy!</div>
+            <div class="workflow-step-desc">
+              We ship your package within 48 hours, freshly roasted. Sit back
+              and enjoy award-winning world-class coffees curated to provide a
+              distinct tasting experience.
+            </div>
+          </div>
+        </div>
+        <a href="/create-plan.html">Create your plan</a>
       </section>
     </main>
     <!-- CARD component -->
