--- a/index.html
+++ b/index.html
@@ -189,42 +189,44 @@
         </div>
       </section>
       <section class="workflow">
-        <h2>How it works</h2>
+        <h2 class="heading-sm workflow__heading">How it works</h2>
         <div class="workflow__progress">
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
+          <div class="workflow__circle"></div>
+          <div class="workflow__circle"></div>
+          <div class="workflow__circle"></div>
         </div>
         <div class="workflow__description">
           <div class="workflow__card">
-            <div class="workflow-step-number">01</div>
-            <div class="workflow-step-name">Pick your coffee</div>
-            <div class="workflow-step-desc">
+            <div class="heading-xl workflow__step-number">01</div>
+            <div class="heading-md workflow__step-name">Pick your coffee</div>
+            <div class="font-body workflow__step-desc">
               Select from our evolving range of artisan coffees. Our beans are
               ethically sourced and we pay fair prices for them. There are new
               coffees in all profiles every month for you to try out.
             </div>
           </div>
           <div class="workflow__card">
-            <div class="workflow-step-number">02</div>
-            <div class="workflow-step-name">Choose the frequency</div>
-            <div class="workflow-step-desc">
+            <div class="heading-xl workflow__step-number">02</div>
+            <div class="heading-md workflow__step-name">
+              Choose the frequency
+            </div>
+            <div class="font-body workflow__step-desc">
               Customize your order frequency, quantity, even your roast style
               and grind type. Pause, skip or cancel your subscription with no
               commitment through our online portal.
             </div>
           </div>
           <div class="workflow__card">
-            <div class="workflow-step-number">03</div>
-            <div class="workflow-step-name">Receive and enjoy!</div>
-            <div class="workflow-step-desc">
+            <div class="heading-xl workflow__step-number">03</div>
+            <div class="heading-md workflow__step-name">Receive and enjoy!</div>
+            <div class="font-body workflow__step-desc">
               We ship your package within 48 hours, freshly roasted. Sit back
               and enjoy award-winning world-class coffees curated to provide a
               distinct tasting experience.
             </div>
           </div>
         </div>
-        <a href="/create-plan.html">Create your plan</a>
+        <a class="btn" href="/create-plan.html">Create your plan</a>
       </section>
     </main>
     <!-- CARD component -->
