feat: add markup for footer

--- a/index.html
+++ b/index.html
@@ -229,6 +229,46 @@
         <a class="btn" href="/create-plan.html">Create your plan</a>
       </section>
     </main>
+    <footer class="footer">
+      <img src="assets/shared/desktop/logo.svg" alt="Coffeeroasters' logo" />
+      <nav class="header__nav">
+        <ul class="header__nav-menu">
+          <li>
+            <a href="/index.html" class="font-nav header__nav-link">Home</a>
+          </li>
+          <li>
+            <a href="/about-us.html" class="font-nav header__nav-link"
+              >About us</a
+            >
+          </li>
+          <li>
+            <a href="/create-plan.html" class="font-nav header__nav-link"
+              >Create your plan</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <div class="footer__media-links">
+        <a href="https://www.facebook.com"></a>
+          <img
+            src="assets/shared/desktop/icon-facebook.svg"
+            alt="Our Facebook account"
+          />
+        </a>
+        <a href="https://www.twitter.com">
+          <img
+            src="assets/shared/desktop/icon-twitter.svg"
+            alt="Our Twitter account"
+          />
+        </a>
+        <a href="https://www.instagram.com">
+          <img
+            src="assets/shared/desktop/icon-instagram.svg"
+            alt="Our Instagram account"
+          />
+        </a>
+      </div>
+    </footer>
     <!-- CARD component -->
     <!-- <div class="card">
       <img
