--- a/index.html
+++ b/index.html
@@ -230,41 +230,44 @@
       </section>
     </main>
     <footer class="footer">
-      <img src="assets/shared/desktop/logo.svg" alt="Coffeeroasters' logo" />
-      <nav class="header__nav">
-        <ul class="header__nav-menu">
+      <img class="footer__logo" src="assets/shared/desktop/logo-light.svg" alt="Coffeeroasters' logo" />
+      <nav class="footer__nav">
+        <ul class="footer__nav-menu">
           <li>
-            <a href="/index.html" class="font-nav header__nav-link">Home</a>
+            <a href="/index.html" class="font-nav footer__nav-link">Home</a>
           </li>
           <li>
-            <a href="/about-us.html" class="font-nav header__nav-link"
+            <a href="/about-us.html" class="font-nav footer__nav-link"
               >About us</a
             >
           </li>
           <li>
-            <a href="/create-plan.html" class="font-nav header__nav-link"
+            <a href="/create-plan.html" class="font-nav footer__nav-link"
               >Create your plan</a
             >
           </li>
         </ul>
       </nav>
       <div class="footer__media-links">
-        <a href="https://www.facebook.com"></a>
+        <a href="https://www.facebook.com" class="footer__sm-link">
           <img
             src="assets/shared/desktop/icon-facebook.svg"
             alt="Our Facebook account"
+            
           />
         </a>
         <a href="https://www.twitter.com">
           <img
             src="assets/shared/desktop/icon-twitter.svg"
             alt="Our Twitter account"
+            class="footer__sm-link"
           />
         </a>
         <a href="https://www.instagram.com">
           <img
             src="assets/shared/desktop/icon-instagram.svg"
             alt="Our Instagram account"
+            class="footer__sm-link"
           />
         </a>
       </div>
