fix: fix color change of social media buttons when hover

--- a/index.html
+++ b/index.html
@@ -230,7 +230,11 @@
       </section>
     </main>
     <footer class="footer">
-      <img class="footer__logo" src="assets/shared/desktop/logo-light.svg" alt="Coffeeroasters' logo" />
+      <img
+        class="footer__logo"
+        src="assets/shared/desktop/logo-light.svg"
+        alt="Coffeeroasters' logo"
+      />
       <nav class="footer__nav">
         <ul class="footer__nav-menu">
           <li>
@@ -253,21 +257,21 @@
           <img
             src="assets/shared/desktop/icon-facebook.svg"
             alt="Our Facebook account"
-            
+            class="footer__sm-img"
           />
         </a>
-        <a href="https://www.twitter.com">
+        <a href="https://www.twitter.com" class="footer__sm-link">
           <img
             src="assets/shared/desktop/icon-twitter.svg"
             alt="Our Twitter account"
-            class="footer__sm-link"
+            class="footer__sm-img"
           />
         </a>
-        <a href="https://www.instagram.com">
+        <a href="https://www.instagram.com" class="footer__sm-link">
           <img
             src="assets/shared/desktop/icon-instagram.svg"
             alt="Our Instagram account"
-            class="footer__sm-link"
+            class="footer__sm-img"
           />
         </a>
       </div>
