fix: change architecture of sass folder

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </ul>
       </nav>
     </header>
-    <main class="main">
+    <main class="main-home">
       <section class="hero">
         <div class="hero__text-container">
           <h1 class="heading-xl hero__heading">Great coffee made simple.</h1>
