--- a/about-us.html
+++ b/about-us.html
@@ -45,7 +45,17 @@
       </nav>
     </header>
 
-    <main class="main-about"></main>
+    <main class="main-about">
+      <section class="hero-about">
+        <h1 class="hero-about__heading">About Us</h1>
+        <p class="hero-about__subheading">
+          Coffeeroasters began its journey of exotic discovery in 1999,
+          highlighting stories of coffee from around the world. We have since
+          been dedicated to bring the perfect cup - from bean to brew - in every
+          shipment.
+        </p>
+      </section>
+    </main>
 
     <footer class="footer">
       <img
