--- a/about-us.html
+++ b/about-us.html
@@ -47,13 +47,15 @@
 
     <main class="main-about">
       <section class="hero-about">
-        <h1 class="hero-about__heading">About Us</h1>
-        <p class="hero-about__subheading">
-          Coffeeroasters began its journey of exotic discovery in 1999,
-          highlighting stories of coffee from around the world. We have since
-          been dedicated to bring the perfect cup - from bean to brew - in every
-          shipment.
-        </p>
+        <div class="hero-about__text-container">
+          <h1 class="heading-lg hero-about__heading">About Us</h1>
+          <p class="font-body hero-about__subheading">
+            Coffeeroasters began its journey of exotic discovery in 1999,
+            highlighting stories of coffee from around the world. We have since
+            been dedicated to bring the perfect cup - from bean to brew - in
+            every shipment.
+          </p>
+        </div>
       </section>
     </main>
 
