--- a/about-us.html
+++ b/about-us.html
@@ -64,12 +64,12 @@
           class="commitment__image"
         />
         <div class="commitment__text-container">
-          <h2 class="commitment__heading">Our commitment</h2>
-          <p class="commitment__description">
+          <h2 class="heading-lg commitment__heading">Our commitment</h2>
+          <p class="font-body commitment__description">
             We’re built on a simple mission and a commitment to doing good along
             the way. We want to make it easy for you to discover and brew the
             world’s best coffee at home. It all starts at the source. To locate
-            the specific lots we want to purchase, we travel nearly 60 days a
+            the specific lots we want <br> to purchase, we travel nearly 60 days a
             year trying to understand the challenges and opportunities in each
             of these places. We collaborate with exceptional coffee growers and
             empower a global community of farmers through with well above
