style: add styles for section.quality in about-us.html

--- a/about-us.html
+++ b/about-us.html
@@ -83,8 +83,8 @@
       </section>
       <section class="quality">
         <div class="quality__text-container">
-          <h2 class="quality__heading">Uncompromising quality</h2>
-          <p class="quality__description">
+          <h2 class="heading-lg quality__heading">Uncompromising quality</h2>
+          <p class="font-body quality__description">
             Although we work with growers who pay close attention to all stages
             of harvest and processing, we employ, on our end, a rigorous quality
             control program to avoid over-roasting or baking the coffee dry.
