--- a/about-us.html
+++ b/about-us.html
@@ -99,6 +99,59 @@
           class="quality__image"
         />
       </section>
+      <section class="contacts">
+        <h2 class="contacts__heading">Our headquarters</h2>
+        <div class="contacts__headquarters">
+          <div class="contacts__location">
+            <img
+              src="assets/about/desktop/illustration-uk.svg"
+              alt="Our headquarter in UK"
+              class="contacts__location-img"
+            />
+            <h3 class="contacts__location-country">United Kingdom</h3>
+            <div class="contacts__location-data">
+              <address class="contacts__location-address">
+                68 Asfordby Rd <br> Alcaston <br> SY6 1YA
+              </address>
+              <a href="tel:+441241918425" class="contacts__location-phone"
+                >+44 1241 918425</a
+              >
+            </div>
+          </div>
+          <div class="contacts__location">
+            <img
+              src="assets/about/desktop/illustration-canada.svg"
+              alt="Our headquarter in Canada"
+              class="contacts__location-img"
+            />
+            <h3 class="contacts__location-country">Canada</h3>
+            <div class="contacts__location-data">
+              <address class="contacts__location-address">
+                1528  Eglinton Avenue <br> Toronto <br> Ontario M4P 1A6
+              </address>
+              <a href="tel:+14164852997" class="contacts__location-phone"
+                >+1 416 485 2997</a
+              >
+            </div>
+          </div>
+          <div class="contacts__location">
+            <img
+              src="assets/about/desktop/illustration-australia.svg"
+              alt="Our headquarter in Australia"
+              class="contacts__location-img"
+            />
+            <h3 class="contacts__location-country">Australia</h3>
+            <div class="contacts__location-data">
+              <address class="contacts__location-address">
+                36 Swanston Street <br> Kewell <br> Victoria
+              </address>
+              <a href="tel:+61499283629" class="contacts__location-phone"
+                >+61 4 9928 3629</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
