feat: add markup for section.hero-plan in create-plan.html

--- a/create-plan.html
+++ b/create-plan.html
@@ -45,6 +45,16 @@
       </nav>
     </header>
     <main>
+      <section class="hero-plan">
+        <div class="hero-plan__text-container">
+          <h1 class="hero-plan__heading">Create plan</h1>
+          <p class="hero-plan__subheading">
+            Coffee the way you wanted it to be. For coffee delivered tomorrow,
+            or next week. For whatever brew method you use. For choice, for
+            convenience, for quality.
+          </p>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <img
