--- a/create-plan.html
+++ b/create-plan.html
@@ -55,6 +55,44 @@
           </p>
         </div>
       </section>
+      <section class="workflow workflow-plan">
+        <div class="workflow__progress">
+          <div class="workflow__circle"></div>
+          <div class="workflow__circle"></div>
+          <div class="workflow__circle"></div>
+        </div>
+        <div class="workflow__description">
+          <div class="workflow__card">
+            <div class="heading-xl workflow__step-number">01</div>
+            <div class="heading-md workflow__step-name">Pick your coffee</div>
+            <div class="font-body workflow__step-desc">
+              Select from our evolving range of artisan coffees. Our beans are
+              ethically sourced and we pay fair prices for them. There are new
+              coffees in all profiles every month for you to try out.
+            </div>
+          </div>
+          <div class="workflow__card">
+            <div class="heading-xl workflow__step-number">02</div>
+            <div class="heading-md workflow__step-name">
+              Choose the frequency
+            </div>
+            <div class="font-body workflow__step-desc">
+              Customize your order frequency, quantity, even your roast style
+              and grind type. Pause, skip or cancel your subscription with no
+              commitment through our online portal.
+            </div>
+          </div>
+          <div class="workflow__card">
+            <div class="heading-xl workflow__step-number">03</div>
+            <div class="heading-md workflow__step-name">Receive and enjoy!</div>
+            <div class="font-body workflow__step-desc">
+              We ship your package within 48 hours, freshly roasted. Sit back
+              and enjoy award-winning world-class coffees curated to provide a
+              distinct tasting experience.
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <img
