feat: add markup for inner form in section.create-plan in create-plan.html

--- a/create-plan.html
+++ b/create-plan.html
@@ -93,6 +93,154 @@
           </div>
         </div>
       </section>
+      <section class="create-plan">
+        <form class="plan-form" action="">
+          <fieldset>
+            <legend>How do you drink your coffee?</legend>
+            <div>
+              <input type="checkbox" id="capsules" name="capsules" />
+              <label for="capsules">
+                <p>Capsule</p>
+                <p>Compatible with Nespresso systems and similar brewers</p>
+              </label>
+            </div>
+            <div>
+              <input type="checkbox" id="filter" name="filter" />
+              <label for="filter">
+                <p>Filter</p>
+                <p>
+                  For pour over or drip methods like Aeropress, Chemex, and V60
+                </p>
+              </label>
+            </div>
+            <div>
+              <input type="checkbox" id="espresso" name="espresso" />
+              <label for="espresso">
+                <p>Espresso</p>
+                <p>
+                  Dense and finely ground beans for an intense, flavorful
+                  experience
+                </p>
+              </label>
+            </div>
+          </fieldset>
+          <fieldset>
+            <legend>What type of coffee</legend>
+            <div>
+              <input type="checkbox" id="single-origin" name="single-origin" />
+              <label for="single-origin">
+                <p>Single Origin</p>
+                <p>
+                  Distinct, high quality coffee from a specific family-owned
+                  farm
+                </p>
+              </label>
+            </div>
+            <div>
+              <input type="checkbox" id="decaf" name="decaf" />
+              <label for="decaf">
+                <p>Decaf</p>
+                <p>
+                  Just like regular coffee, except the caffeine has been removed
+                </p>
+              </label>
+            </div>
+            <div>
+              <input type="checkbox" id="blended" name="blended" />
+              <label for="blended">
+                <p>Blended</p>
+                <p>
+                  Combination of two or three dark roasted beans of organic
+                  coffees
+                </p>
+              </label>
+            </div>
+          </fieldset>
+          <fieldset>
+            <legend>How much would you like?</legend>
+            <div>
+              <input type="checkbox" id="250g" name="250g" />
+              <label for="250g">
+                <p>250g</p>
+                <p>
+                  Perfect for the solo drinker. Yields about 12 delicious cups.
+                </p>
+              </label>
+            </div>
+            <div>
+              <input type="checkbox" id="500g" name="500g" />
+              <label for="500g">
+                <p>500g</p>
+                <p>
+                  Perfect option for a couple. Yields about 40 delectable cups.
+                </p>
+              </label>
+            </div>
+            <div>
+              <input type="checkbox" id="1000g" name="1000g" />
+              <label for="1000g">
+                <p>1000g</p>
+                <p>
+                  Perfect for offices and events. Yields about 90 delightful
+                  cups.
+                </p>
+              </label>
+            </div>
+          </fieldset>
+          <fieldset>
+            <legend>Want us to grind them?</legend>
+            <div>
+              <input type="checkbox" id="wholebean" name="wholebean" />
+              <label for="wholebean">
+                <p>Wholebean</p>
+                <p>Best choice if you cherish the full sensory experience</p>
+              </label>
+            </div>
+            <div>
+              <input type="checkbox" id="filter" name="filter" />
+              <label for="filter">
+                <p>Filter</p>
+                <p>
+                  For drip or pour-over coffee methods such as V60 or Aeropress
+                </p>
+              </label>
+            </div>
+            <div>
+              <input type="checkbox" id="cafetiere" name="cafetiere" />
+              <label for="cafetiere">
+                <p>Cafetiére</p>
+                <p>
+                  Course ground beans specially suited for french press coffee
+                </p>
+              </label>
+            </div>
+          </fieldset>
+          <fieldset>
+            <legend>How often should we deliver?</legend>
+            <div>
+              <input type="checkbox" id="every-week" name="every-week" />
+              <label for="every-week">
+                <p>Every week</p>
+                <p>$7.20 per shipment. Includes free first-class shipping.</p>
+              </label>
+            </div>
+            <div>
+              <input type="checkbox" id="every-2-weeks" name="every-2-weeks" />
+              <label for="every-2-weeks">
+                <p>Every 2 weeks</p>
+                <p>$9.60 per shipment. Includes free priority shipping.</p>
+              </label>
+            </div>
+            <div>
+              <input type="checkbox" id="every-month" name="every-month" />
+              <label for="every-month">
+                <p>Every month</p>
+                <p>$12.00 per shipment. Includes free priority shipping.</p>
+              </label>
+            </div>
+          </fieldset>
+        </form>
+      </section>
     </main>
     <footer class="footer">
       <img
